settings - configurable dashboard sensor view